	'rivendell/rd_listlog.h' to be an int.
	* Added 'link' and 'ext' fields to the 'RD_ListLog()' call.
2017-02-03 Todd Baker <bakert@rfa.org>
	* Updated comments in rivendell/rd_common.c, rivendell/rd_addcart.c 
	and rivendell/rd_addcart.h.
2017-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'RD_Cnv_tm_to_DTString()' in 'rivendell/rd_common.c'
	that caused a segfault when passed a null 'struct tm' value.
2017-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'logline_gracetime' field to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Added the 'logline_link_length' field to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Fixed typos in 'rivendell/rd_savelog.c' that broke the
	RD_SaveLog() call.
	* Altered the 'logline_link_starttime' and 'logline_ext_starttime'
	fields of 'struct save_logline_values' to be 'struct tm' instead
	of 'char []'.
	* Added an rd_savelog(7) man page.
2017-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'logline_conductor' field to the 'rd_logline' struct.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Changed the type of the 'logline_forced_length' field of the
	'rd_logline' struct to return milliseconds.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'cart_conductor' field to the 'rd_cart' struct.
	* Added 'cart_composer' and 'use_cart_composer' fields to the
	'rd_cart_values' struct.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'rivendell/rd_listcarts.c' and
	'rivendell/rd_listcart.c' that caused the 'cart_forced_length',
	'cart_average_length', 'cart_length_deviation' and
	'cart_average_segue_length' fields to always be returned as '0'.
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a buffer overflow bug in RD_Cnv_tm_to_DTString() in
	'rivendell/rd_common.c'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell/rd_savelog.c' that broke multi-line
	log saves.